fix change address, scrollbar and transactions using trezor issues

--- a/extension/source/containers/common/Container/Container.scss
+++ b/extension/source/containers/common/Container/Container.scss
@@ -6,7 +6,7 @@
   max-width: 600px;
   height: 600px;
   font-size: 20px;
-  min-width: 372px;
+  overflow: hidden;
   display: flex;
   position: relative;
   padding: 0px;
